k8s/50-product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          # Replace with your Docker Hub repository
          image: shenolosman/microshop-product:latest
          ports:
            - containerPort: 5001
