k8s/70-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          # Replace with your Docker Hub repository
          image: shenolosman/microshop-order:latest
          ports:
            - containerPort: 5002
