k8s/80-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # Replace with your built front-end image containing the compiled React/Tailwind app
          image: shenolosman/microshop-frontend:latest
          ports:
            - containerPort: 80
