k8s/51-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microshop
spec:
  selector:
    app: product-service
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
