k8s/71-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microshop
spec:
  selector:
    app: order-service
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
